--- a/README.asciidoc
+++ b/README.asciidoc
@@ -73,14 +73,21 @@ In the future, by working at the wire protocol level, *crunchy-proxy* can implem
 
 The proxy is a golang binary, you execute it as follows:
 ....
-crunchyproxy -config=config.json
+$> crunchy-proxy start --config=config.yaml
 ....
 
-To run the proxy with logging enabled and highly verbose output:
+To run the proxy at different logging output levels:
+
 ....
-crunchyproxy -config=config.json -logtostderr=true -v 5
+$> crunchyproxy -config=config.yaml --log-level=<level>
 ....
 
+Where level is one of the following:
+
+* *debug*
+* *info*
+* *error*
+* *fatal*
 
 Detailed documentation including configuration file format and 
 developer information is 
